manifests/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: frontend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-api
  template:
    metadata:
      labels:
        app: frontend-api
    spec:
      containers:
      - name: frontend-tappi
        image: containerland.azurecr.io/frontendtappi:dev
        imagePullPolicy: Always
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: acr-auth
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 80
  selector:
    app: frontend-api
