manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: front-ingress
  annotations:
    kubernetes.io/ingress.class: traefik 
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
  - hosts:
    - untappiappi.westeurope.cloudapp.azure.com
    secretName: tls-secret
  rules:
  - host: untappiappi.westeurope.cloudapp.azure.com
  - http:
      paths:
      - path: /
        backend:
          serviceName: frontend-service
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: back-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/rewrite-target: /$2
spec:
  tls:
    - hosts:
        - untappiappi.westeurope.cloudapp.azure.com
      secretName: tls-secret
  rules:
    - http:
        paths:
          - path: /api/
            backend:
              serviceName: backend-service
              servicePort: 80
