manifests/untappi-appi-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: untappi-appi-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
    - hosts:
        - untappiappi.westeurope.cloudapp.azure.com
      secretName: tls-secret
  rules:
    - host: untappiappi.westeurope.cloudapp.azure.com
      http:
        paths:
          - path: /
            backend:
              serviceName: frontend-service
              servicePort: 80
          - path: /(.*)
            backend:
              serviceName: backend-service
              servicePort: 80
